--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "bcryptjs": "^2.4.3",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
+    "notiflix": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-webcam": "^7.0.1",
     "superjson": "1.9.1",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
