--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@exadel/compreface-js-sdk": "^1.0.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.10.0",
+    "@tensorflow/tfjs-node": "^4.1.0",
     "@trpc/client": "10.0.0-rc.4",
     "@trpc/next": "10.0.0-rc.4",
     "@trpc/react-query": "10.0.0-rc.4",
@@ -21,6 +23,8 @@
     "@types/formidable": "^2.0.5",
     "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
+    "canvas": "^2.10.2",
+    "face-api.js": "^0.22.2",
     "formidable": "^2.0.1",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
