--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/formidable": "^2.0.5",
     "@types/uuid": "^8.3.4",
+    "@types/ws": "^8.5.3",
     "bcryptjs": "^2.4.3",
     "canvas": "^2.10.2",
     "face-api.js": "^0.22.2",
@@ -32,8 +33,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-webcam": "^7.0.1",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "superjson": "1.9.1",
     "uuid": "^9.0.0",
+    "ws": "^8.11.0",
     "zod": "^3.18.0",
     "zustand": "^4.1.4"
   },
