--- a/.env-example
+++ b/.env-example
@@ -7,12 +7,14 @@
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
 # Prisma
-DATABASE_URL=file:./db.sqlite
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/pmsac2
 
+COMPREFACE_URL="http://localhost"
+COMPREFACE_API_KEY="3e76156a-b92e-4a45-8ec3-74edcfd0246e"
 # Next Auth
 # You can generate the secret via 'openssl rand -base64 32' on Linux
 # More info: https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=
+NEXTAUTH_SECRET="wusGlVkX7VOy7Blw3ehiA29uQQHVHfCQYZ9AKjIt2xc="
 NEXTAUTH_URL=http://localhost:3000
 
 # Next Auth Discord Provider
